--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
       href="./favicon-32x32.png"
     />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Frontend Mentor | Shortly URL shortening API Challenge</title>
   </head>
   <body>
